--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,14 @@
   margin: 0;
   padding: 0;
 }
+
+
+.loading{
+  text-align: center;
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  background-color: #000000
+}
